27 Jun 2003 Allow unload reject in hdl final processing - Jan Jaeger
27 Jun 2003 Support dynamic loadable cgi routines - Jan Jaeger
27 Jun 2003 Panel.c + hsccmd.c: clear/reset screen before exiting - Fish
27 Jun 2003 Panel.c: 1) removed all external-gui logic, 2) long
            messages now wrap to the next screen line - Fish
27 Jun 2003 Fixed some "integer constant is too large for "long" type"
            warnings - Fish
27 Jun 2003 Added addt'l instructions/info to autogen.sh - Fish
27 Jun 2003 Added README.HDL to EXTRA_DIST in makefile.am - Fish
27 Jun 2003 Updated makefile.am to add Windows resource definitions
            to dyngui.dll - Fish
27 Jun 2003 Framework for ALS4 features - Roger Bowler
26 Jun 2003 Check for physical shared object when loading dll - Jan Jaeger
26 Jun 2003 Fix Win32 hdl case-sensitivity bug - Fish
26 Jun 2003 TT32 CTCI fixes: 1) fix ACCESS_VIOLATION caused by NULL ptr
            being returned by 'tt32_get_default_iface', 2) 'tt32stats_cmd'
            temporarily fixed by fixing bug in 'CTCI_Init' and adding temp
            workaround code to 'display_tt32_stats' function to work around
            bug in TunTap32.dll, 3) add some code to try and resolve bogus
            "HHCCT048E" message being issued at close/shutdown.
25 Jun 2003 shared device version/release checking - Greg Smith
25 Jun 2003 micro performance update in branch on condition - Bernard van der Helm
25 Jun 2003 Fix unlikely but serious fthreads bug in wait_condition - Fish
25 Jun 2003 Move external gui logic from panel_display to dyngui.c, and
            modify build process (makefile.am) to automatically build
            new dyngui.dll (and dyninst.dll too) - Fish
25 Jun 2003 Add dyninst qualifier to dynamic instr. symbol names - Jan Jaeger
23 Jun 2003 Fix interrupt queue problem in haltio - Fish (by Greg Smith)
17 Jun 2003 dyninst now supports dynamic instruction update - Jan Jaeger
15 Jun 2003 Add dynamic module preloading - Jan Jaeger