@@ -41,7 +41,7 @@
 #define FEATURE_INTERPRETIVE_EXECUTION
 #define FEATURE_LOCK_PAGE
 #define FEATURE_LINKAGE_STACK
-// #define FEATURE_MESSAGE_SECURITY_ASSIST
+#define FEATURE_MESSAGE_SECURITY_ASSIST
 #define FEATURE_MOVE_PAGE_FACILITY_2
 #define FEATURE_MSSF_CALL
 #define FEATURE_MULTIPLE_CONTROLLED_DATA_SPACE
