@@ -45,7 +45,7 @@
 #define FEATURE_LOAD_REVERSED
 #define FEATURE_LOCK_PAGE
 // #define FEATURE_LONG_DISPLACEMENT
-// #define FEATURE_MESSAGE_SECURITY_ASSIST
+#define FEATURE_MESSAGE_SECURITY_ASSIST
 #define FEATURE_MOVE_PAGE_FACILITY_2
 #define FEATURE_MVS_ASSIST
 #define FEATURE_PAGE_PROTECTION
